2009-02-04  Thomas Thurman  <tthurman@gnome.org>

	* configure.in: post-branch bump to 2.27.0.

2009-02-04  Neil Jagdish Patel  <njpatel@gmail.com>

	* src/core/frame.c: queue resize on window undecorate

2009-02-03  Luca Ferretti  <elle.uca@libero.it>

	* src/include/all-keybindings.h: Fix description, focus the
	desktop, not desktop backgroung (Closes bug #569649)

2009-02-02  Matt Kraai  <kraai@ftfbs.org>

	* src/core/schema-bindings.c: Wrap g_error calls in braces.

2009-02-01  Thomas Thurman  <tthurman@gnome.org>

        * configure.in: Post-release bump to 2.25.233.

2009-02-01  Thomas Thurman  <tthurman@gnome.org>

        * NEWS: 2.25.144 release.

2009-02-01  Matt Kraai  <kraai@ftbfs.org>

        Set prop_hooks_table to NULL after freeing it.

	* src/core/window-props.c:

2009-01-29  Thomas Thurman  <tthurman@gnome.org>

        Window properties are looked up in a hash table rather than
        by iteration over an array.  Saves ~44us per window, but
        also makes the code cleaner.

	* src/core/display-private.h:
	* src/core/window-props.c:

2009-01-27  Matthias Claesen <mclasen@redhat.com>

	* src/core/edge-resistance.c: some lists failed to keep track
          of their contents and therefore didn't free correctly.
          Closes #552303.

2009-01-27  Matthias Claesen <mclasen@redhat.com>

	* src/core/prefs.c: Free name of old theme when new theme
          is loaded.  Closes #552973.

2009-01-27  Matthias Claesen <mclasen@redhat.com>

	* src/ui/ui.c: free the result of gdk_text_property_to_utf8_list()
          even when it returns no data.

2009-01-27  Owen Taylor  <otaylor@redhat.com>

       GtkStyle is specific to a particular colormap. Metacity
       uses different colormaps for windows with different
       visuals, so it must specialize the GtkStyle.

       Closes #568365 and #513944.

       * src/ui/frames.[ch]: Keep a GtkStyle for each MetaUIFrame, which is
         obtained by calling gtk_style_attach() on the style for the