@@ -1,3 +1,8 @@
+2009-02-05  Thomas Thurman  <tthurman@gnome.org>
+
+        * src/ui/theme-parser.c: collapse several strings into one
+        for the translators' benefit.
+
 2009-02-04  Thomas Thurman  <tthurman@gnome.org>
 
 	* configure.in: post-branch bump to 2.27.0.
